# life-logging

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  run_background.sh
.github/workflows/: ci.yml
benches/: audio_buffer_benchmark.rs  wav_encoder_benchmark.rs
codec-derive/: Cargo.toml
codec-derive/src/: attr.rs  codegen.rs  lib.rs
config/: default.toml
scripts/: README.md  loss_experiment.py  pyproject.toml
src/: app_state.rs  audio_buffer.rs  config.rs  error.rs  lib.rs  main.rs
src/audio/: buffer.rs  codecs.rs  encoder.rs  mod.rs  processor.rs  visualizer.rs
src/audio/codec/: factory.rs  flac.rs  mod.rs  moshi.rs  opus.rs  test_utils.rs  traits.rs  wav.rs
src/persistence/: disk_storage.rs  local_storage.rs  mod.rs  s3_storage.rs  storage.rs  storage_manager.rs
src/server/: handlers.rs  mod.rs  routes.rs
src/storage/: local_storage.rs  s3_storage.rs  storage_manager.rs
tests/: manual_storage_test.rs  moshi_encoder_test.rs  s3_connectivity_test.rs
