[workspace]
members = ["codec-derive", "."]
resolver = "2"

[package]
name = "life-logging"
version = "0.1.0"
authors = ["Henri Lemoine <henri123lemoine@gmail.com>"]
edition = "2021"
description = "A Rust-based lifelogging audio recording server"
license = "MIT"
repository = "https://github.com/henri123lemoine/life-logging"

[lib]
name = "life_logging"
path = "src/lib.rs"

[[bin]]
name = "life_logging"
path = "src/main.rs"

[dependencies]
aws-config = "1.5.9"
aws-sdk-s3 = "1.58.0"
axum = "0.7.7"
axum-server = "0.7.1"
byteorder = "1.5.0"
candle-core = "0.7.2"
candle-nn = "0.7.2"
chrono = "0.4.38"
config = "0.14.1"
cpal = "0.15.3"
dotenv = "0.15.0"
hound = "3.5.1"
moshi = "0.2.4"
once_cell = "1.20.2"
opus = "0.3.0"
plotters = "0.3.7"
png = "0.17.14"
quote = "1.0.37"
rand = "0.8.5"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.128"
tempfile = "3.13.0"
test-case = "3.3.1"
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
utoipa = { version = "5.1.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }
codec-derive = { path = "./codec-derive", version = "0.1.0" }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "audio_buffer_benchmark"
harness = false

[[bench]]
name = "wav_encoder_benchmark"
harness = false

[profile.release]
debug = true

[profile.bench]
debug = true
